--- a/package.json
+++ b/package.json
@@ -2,21 +2,24 @@
   "author": "Adam Rudd <adam.rudd@uqconnect.edu.au>",
   "name": "mqtt-growl",
   "description": "A growl based mqtt monitor",
-  "version": "0.0.4",
+  "version": "0.0.5",
   "keywords": ["mqtt", "growl"],
   "repository": {
     "type": "git",
     "url": "git://github.com/adamvr/mqtt-growl.git"
   },
   "main": "mqtt-growl",
-  "bin": "mqtt-growl",
+  "bin": {
+    "mqtt-growl": "index.js"
+  },
   "engines": {
     "node": "~0.6.5"
   },
   "dependencies": {
     "growl":">=1.5.0",
     "mqttjs":">=0.1.3",
-    "optimist":">=0.3.1"
+    "optimist":">=0.3.1",
+    "underscore":">=1.3.3"
   },
   "devDependencies": {},
   "optionalDependencies": {}
