--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "mqtt-growl": "index.js"
   },
   "engines": {
-    "node": "~0.6.5"
+    "node": ">=0.6.5"
   },
   "dependencies": {
     "growl":">=1.5.0",
