--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   },
   "dependencies": {
     "growl":">=1.5.0",
-    "mqttjs":">=0.1.3",
+    "mqtt":">=0.1.3",
     "optimist":">=0.3.1",
     "underscore":">=1.3.3"
   },
