--- a/package.json
+++ b/package.json
@@ -2,8 +2,11 @@
   "author": "Adam Rudd <adam.rudd@uqconnect.edu.au>",
   "name": "mqtt-growl",
   "description": "A growl based mqtt monitor",
-  "version": "0.0.6",
-  "keywords": ["mqtt", "growl"],
+  "version": "0.1.0",
+  "keywords": [
+    "mqtt",
+    "growl"
+  ],
   "repository": {
     "type": "git",
     "url": "git://github.com/adamvr/mqtt-growl.git"
@@ -16,10 +19,10 @@
     "node": ">=0.6.5"
   },
   "dependencies": {
-    "growl":">=1.5.0",
-    "mqtt":">=0.2.8",
-    "optimist":">=0.3.1",
-    "underscore":">=1.3.3"
+    "growl": ">=1.5.0",
+    "mqtt": ">=0.2.8",
+    "optimist": ">=0.3.1",
+    "underscore": ">=1.3.3"
   },
   "devDependencies": {},
   "optionalDependencies": {}
